Fixed card x-overflow, changed link length and card css

--- a/css/index.css
+++ b/css/index.css
@@ -210,10 +210,11 @@ text{
 }
 
 .card-text{
-    padding: 7px;
+    padding: 10px;
     height: 120px;
     min-height:120px;
     overflow-y: scroll;
+    border-left: 7px solid rgba(240, 128, 128, 0.9);
 }
 
 .card-header{
@@ -225,10 +226,10 @@ text{
     border-bottom: none;
 }
 .card-footer{
-    color: darkgray;
+    color: #0e920e;
     font-size:small;
     border-radius: 0!important;
-    background-color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.4);
     border-left: 7px solid rgba(240, 128, 128, 0.9);
     border-top: none;
     border-right: none;
